fix: fixing navigation so aligned and making responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,14 +4,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
-.navbar-nav {
-    clear:both;
-    float:right;
-    position:relative;
-    border:4px solid rgba(13, 14, 13, 0.8);  /**added border to see why its not positioning correctly **/
+.navbar-collapse{   /**this helps override so navigation is to the right orignally was flex-grow:1; **/
+    flex-grow:0;
 }
-
-
 .navbar-brand h1 {
 font-family:'Lobster', cursive, Times, serif;
 font-size:3.5rem;
@@ -20,17 +15,34 @@ padding:5%;
 
 .navbar-nav li {
     font-family:'Lobster', cursive, Times, serif;
-    font-size:1.5rem;
+    font-size:2rem;
    }
+   
+   .nav-link{
+    color:rgb(255, 255, 255) !important;   /**important needed to enforce color change over bootstrap **/
+   
+}  
+   .nav-link:hover {
+    text-decoration:underline;
+    
+}
+ 
+.nav-link:active {
+ text-decoration:underline !important;
+ 
+}
 
 .bg-dark {
     --bs-bg-opacity: 1;
     background-color: rgba(44, 143, 5, 0.8)!important;
 }
+.py-5 {
+    padding-top: 1.5rem!important;   /**BOOTSTRAP removing some whitespace around hero image TOP so fits smaller screen better **/
+}
 
 #hero-image-holder {  /**from code institute love running project **/
-    width: 320px;
-    height: 320px;
+    width: 20rem;  /**was 320px changed for responsiveness**/
+    height: 20rem;   /**was 320px changed for responsiveness**/
     border-radius: 50%;
     margin: 0 auto;
 }
@@ -47,8 +59,8 @@ padding:5%;
 
 .btn-primary{
     color: #fff;
-    background-color: rgba(44, 143, 5, 0.8);
-    border-color: rgba(44, 143, 5, 0.8);
+    background-color: rgb(32, 107, 3);
+    border-color: rgba(44, 143, 5);
     text-decoration: none;
 }
 .btn-primary a{
@@ -61,15 +73,24 @@ padding:5%;
     border-color: rgba(13, 14, 13, 0.8);
 }
 
+.btn-outline-secondary {
+    color: rgb(249, 253, 249);
+    text-decoration: none;
+}
+
 .btn-outline-secondary a {
-    color: rgba(13, 14, 13, 0.8);
+    color: rgb(13, 14, 13);
     text-decoration: none;
 }
 .btn-outline-secondary:hover  {
-    color: rgba(251, 253, 251, 0.8);
-    background-color: rgba(13, 14, 13, 0.8);
-    border-color: rgba(13, 14, 13, 0.8);
+    color:rgb(251, 253, 251);
+    background-color: rgba(44, 143, 5);
+    border-color: rgba(12, 175, 12, 0.8);
 
+}
+.btn-outline-secondary a:hover {
+    color:rgb(251, 253, 251);
+    text-decoration: none;
 }
 
 #dog-friendly-venues {
@@ -106,4 +127,54 @@ padding:5%;
 }
 #dog-friendly-venues div p,h2,h3 {
     color:aliceblue
+}
+ 
+
+ /**RESPONSIVE CHANGES - Tablet and Mobile *****/
+
+/* For medium screens sizes less than 950px but bigger than 800px otherwise media query below wil kick in  */
+@media screen and (max-width: 950px){
+        
+    #dog-friendly-venues div {     
+        width: 100%;
+        height:100%;
+        margin-top:2rem; 
+        margin-right:2rem;
+        margin-bottom:1rem;
+        overflow: hidden;
+        float: left;
+        padding:2%;
+        text-align: center;
+        border: 0.2rem solid rgba(248, 247, 247, 0.1);
+        border-top-left-radius: 2%;
+        border-top-right-radius: 2%;
+        /*box-sizing: border-box;*/
+        background-color: rgba(26, 25, 25, 0.8);
+        position:relative;
+    }
+    .py-5 {
+        padding-top: 1rem!important;   /**BOOTSTRAP removing some whitespace around hero image TOP so fits smaller screen better **/
+        padding-bottom: 1rem!important; /**BOOTSTRAP removing some whitespace around hero image BOTTOM so fits smaller screen better **/
+    }
+
+    #hero-image-holder {  /**from code institute love running project **/
+        width: 10rem;
+        height: 10rem;
+        border-radius: 50%;
+        /*margin: 0 auto; */
+        margin-top:0.2rem;
+        float:right;
+    }
+
+    .col-lg-6 {
+        margin-top:0.2rem;
+        float:left;
+    }
+        
+    }
+
+
+/** For small screensizes less than 800px **/
+@media screen and (max-width: 800px){
+    
 }
